Package_Tools/include-C/flint/in_arbeit/pp/arb.pp

(* Const before type ignored *)
procedure arb_sin_cos_pi(s:Tarb_t; c:Tarb_t; x:Tarb_t; prec:Tslong);cdecl;external;
(* Const before type ignored *)
procedure arb_tan(y:Tarb_t; x:Tarb_t; prec:Tslong);cdecl;external;
(* Const before type ignored *)
procedure arb_cot(y:Tarb_t; x:Tarb_t; prec:Tslong);cdecl;external;
(* Const before type ignored *)
procedure arb_tan_pi(y:Tarb_t; x:Tarb_t; prec:Tslong);cdecl;external;
(* Const before type ignored *)
procedure arb_cot_pi(y:Tarb_t; x:Tarb_t; prec:Tslong);cdecl;external;
procedure _arb_sin_pi_fmpq_algebraic(s:Tarb_t; p:Tulong; q:Tulong; prec:Tslong);cdecl;external;
procedure _arb_cos_pi_fmpq_algebraic(c:Tarb_t; p:Tulong; q:Tulong; prec:Tslong);cdecl;external;
procedure _arb_sin_cos_pi_fmpq_algebraic(s:Tarb_t; c:Tarb_t; p:Tulong; q:Tulong; prec:Tslong);cdecl;external;
(* Const before type ignored *)
procedure arb_sin_cos_pi_fmpq(s:Tarb_t; c:Tarb_t; x:Tfmpq_t; prec:Tslong);cdecl;external;
(* Const before type ignored *)
procedure arb_sin_pi_fmpq(s:Tarb_t; x:Tfmpq_t; prec:Tslong);cdecl;external;
(* Const before type ignored *)
procedure arb_cos_pi_fmpq(c:Tarb_t; x:Tfmpq_t; prec:Tslong);cdecl;external;
(* Const before type ignored *)
procedure arb_sinc(z:Tarb_t; x:Tarb_t; prec:Tslong);cdecl;external;
(* Const before type ignored *)
procedure arb_sinc_pi(z:Tarb_t; x:Tarb_t; prec:Tslong);cdecl;external;
(* Const before type ignored *)
procedure arb_sinh(z:Tarb_t; x:Tarb_t; prec:Tslong);cdecl;external;
(* Const before type ignored *)
procedure arb_cosh(z:Tarb_t; x:Tarb_t; prec:Tslong);cdecl;external;
(* Const before type ignored *)
procedure arb_sinh_cosh(s:Tarb_t; c:Tarb_t; x:Tarb_t; prec:Tslong);cdecl;external;
(* Const before type ignored *)
procedure arb_tanh(y:Tarb_t; x:Tarb_t; prec:Tslong);cdecl;external;
(* Const before type ignored *)
procedure arb_coth(y:Tarb_t; x:Tarb_t; prec:Tslong);cdecl;external;
(* Const before type ignored *)
procedure arb_atan_arf(z:Tarb_t; x:Tarf_t; prec:Tslong);cdecl;external;
(* Const before type ignored *)
procedure arb_atan(z:Tarb_t; x:Tarb_t; prec:Tslong);cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
procedure arb_atan2(z:Tarb_t; b:Tarb_t; a:Tarb_t; prec:Tslong);cdecl;external;
(* Const before type ignored *)
procedure arb_asin(z:Tarb_t; x:Tarb_t; prec:Tslong);cdecl;external;
(* Const before type ignored *)
procedure arb_acos(z:Tarb_t; x:Tarb_t; prec:Tslong);cdecl;external;
(* Const before type ignored *)
procedure arb_atanh(z:Tarb_t; x:Tarb_t; prec:Tslong);cdecl;external;
(* Const before type ignored *)
procedure arb_asinh(z:Tarb_t; x:Tarb_t; prec:Tslong);cdecl;external;
(* Const before type ignored *)
procedure arb_acosh(z:Tarb_t; x:Tarb_t; prec:Tslong);cdecl;external;
(* Const before type ignored *)
procedure arb_sec(res:Tarb_t; x:Tarb_t; prec:Tslong);cdecl;external;
(* Const before type ignored *)
procedure arb_csc(res:Tarb_t; x:Tarb_t; prec:Tslong);cdecl;external;
(* Const before type ignored *)
procedure arb_csc_pi(res:Tarb_t; x:Tarb_t; prec:Tslong);cdecl;external;
(* Const before type ignored *)
procedure arb_sech(res:Tarb_t; x:Tarb_t; prec:Tslong);cdecl;external;
(* Const before type ignored *)
procedure arb_csch(res:Tarb_t; x:Tarb_t; prec:Tslong);cdecl;external;
procedure arb_fac_ui(z:Tarb_t; n:Tulong; prec:Tslong);cdecl;external;
procedure arb_doublefac_ui(z:Tarb_t; n:Tulong; prec:Tslong);cdecl;external;
(* Const before type ignored *)
procedure arb_bin_ui(z:Tarb_t; n:Tarb_t; k:Tulong; prec:Tslong);cdecl;external;
procedure arb_bin_uiui(z:Tarb_t; n:Tulong; k:Tulong; prec:Tslong);cdecl;external;
(* Const before type ignored *)
procedure arb_fib_fmpz(z:Tarb_t; n:Tfmpz_t; prec:Tslong);cdecl;external;
procedure arb_fib_ui(z:Tarb_t; n:Tulong; prec:Tslong);cdecl;external;
procedure arb_const_pi(z:Tarb_t; prec:Tslong);cdecl;external;
procedure arb_const_sqrt_pi(z:Tarb_t; prec:Tslong);cdecl;external;
procedure arb_const_log_sqrt2pi(z:Tarb_t; prec:Tslong);cdecl;external;
procedure arb_const_log2(z:Tarb_t; prec:Tslong);cdecl;external;
procedure arb_const_log10(z:Tarb_t; prec:Tslong);cdecl;external;
procedure arb_const_euler(z:Tarb_t; prec:Tslong);cdecl;external;
procedure arb_const_catalan(z:Tarb_t; prec:Tslong);cdecl;external;
procedure arb_const_e(z:Tarb_t; prec:Tslong);cdecl;external;
procedure arb_const_khinchin(z:Tarb_t; prec:Tslong);cdecl;external;
procedure arb_const_glaisher(z:Tarb_t; prec:Tslong);cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
procedure arb_agm(z:Tarb_t; x:Tarb_t; y:Tarb_t; prec:Tslong);cdecl;external;
(* Const before type ignored *)
procedure arb_lgamma(z:Tarb_t; x:Tarb_t; prec:Tslong);cdecl;external;
(* Const before type ignored *)
procedure arb_rgamma(z:Tarb_t; x:Tarb_t; prec:Tslong);cdecl;external;
(* Const before type ignored *)
procedure arb_gamma(z:Tarb_t; x:Tarb_t; prec:Tslong);cdecl;external;
(* Const before type ignored *)
procedure arb_gamma_fmpq(z:Tarb_t; x:Tfmpq_t; prec:Tslong);cdecl;external;
(* Const before type ignored *)
procedure arb_gamma_fmpz(z:Tarb_t; x:Tfmpz_t; prec:Tslong);cdecl;external;
(* Const before type ignored *)
procedure arb_digamma(y:Tarb_t; x:Tarb_t; prec:Tslong);cdecl;external;
(* Const before type ignored *)
procedure arb_zeta(z:Tarb_t; s:Tarb_t; prec:Tslong);cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
procedure arb_hurwitz_zeta(z:Tarb_t; s:Tarb_t; a:Tarb_t; prec:Tslong);cdecl;external;
(* Const before type ignored *)
procedure arb_rising_ui(z:Tarb_t; x:Tarb_t; n:Tulong; prec:Tslong);cdecl;external;
(* Const before type ignored *)
procedure arb_rising_fmpq_ui(y:Tarb_t; x:Tfmpq_t; n:Tulong; prec:Tslong);cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
procedure arb_rising(z:Tarb_t; x:Tarb_t; n:Tarb_t; prec:Tslong);cdecl;external;
(* Const before type ignored *)
procedure arb_rising2_ui(u:Tarb_t; v:Tarb_t; x:Tarb_t; n:Tulong; prec:Tslong);cdecl;external;
procedure arb_log_ui_from_prev(s:Tarb_t; k:Tulong; log_prev:Tarb_t; prev:Tulong; prec:Tslong);cdecl;external;
procedure arb_const_apery(s:Tarb_t; prec:Tslong);cdecl;external;
procedure arb_zeta_ui_asymp(x:Tarb_t; s:Tulong; prec:Tslong);cdecl;external;
procedure arb_zeta_ui_borwein_bsplit(x:Tarb_t; s:Tulong; prec:Tslong);cdecl;external;
procedure arb_zeta_ui_euler_product(z:Tarb_t; s:Tulong; prec:Tslong);cdecl;external;
procedure arb_zeta_ui_bernoulli(x:Tarb_t; n:Tulong; prec:Tslong);cdecl;external;
procedure arb_zeta_ui_vec_borwein(z:Tarb_ptr; start:Tulong; num:Tslong; step:Tulong; prec:Tslong);cdecl;external;
procedure arb_zeta_ui(x:Tarb_t; n:Tulong; prec:Tslong);cdecl;external;
procedure arb_zeta_ui_vec_even(x:Tarb_ptr; start:Tulong; num:Tslong; prec:Tslong);cdecl;external;
procedure arb_zeta_ui_vec_odd(x:Tarb_ptr; start:Tulong; num:Tslong; prec:Tslong);cdecl;external;
procedure arb_zeta_ui_vec(x:Tarb_ptr; start:Tulong; num:Tslong; prec:Tslong);cdecl;external;
procedure arb_bernoulli_ui(b:Tarb_t; n:Tulong; prec:Tslong);cdecl;external;
procedure arb_bernoulli_ui_zeta(b:Tarb_t; n:Tulong; prec:Tslong);cdecl;external;
(* Const before type ignored *)
procedure arb_bernoulli_fmpz(b:Tarb_t; n:Tfmpz_t; prec:Tslong);cdecl;external;
(* Const before type ignored *)
procedure arb_bernoulli_poly_ui(res:Tarb_t; n:Tulong; x:Tarb_t; prec:Tslong);cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
procedure arb_polylog(w:Tarb_t; s:Tarb_t; z:Tarb_t; prec:Tslong);cdecl;external;
(* Const before type ignored *)
procedure arb_polylog_si(w:Tarb_t; s:Tslong; z:Tarb_t; prec:Tslong);cdecl;external;
(* Const before type ignored *)
procedure arb_chebyshev_t_ui(a:Tarb_t; n:Tulong; x:Tarb_t; prec:Tslong);cdecl;external;
(* Const before type ignored *)
procedure arb_chebyshev_t2_ui(a:Tarb_t; b:Tarb_t; n:Tulong; x:Tarb_t; prec:Tslong);cdecl;external;
(* Const before type ignored *)
procedure arb_chebyshev_u_ui(a:Tarb_t; n:Tulong; x:Tarb_t; prec:Tslong);cdecl;external;
(* Const before type ignored *)
procedure arb_chebyshev_u2_ui(a:Tarb_t; b:Tarb_t; n:Tulong; x:Tarb_t; prec:Tslong);cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
procedure arb_power_sum_vec(res:Tarb_ptr; a:Tarb_t; b:Tarb_t; len:Tslong; prec:Tslong);cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
procedure arb_bell_sum_taylor(res:Tarb_t; n:Tfmpz_t; a:Tfmpz_t; b:Tfmpz_t; mmag:Tfmpz_t; 
            prec:Tslong);cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
procedure arb_bell_sum_bsplit(res:Tarb_t; n:Tfmpz_t; a:Tfmpz_t; b:Tfmpz_t; mmag:Tfmpz_t; 
            prec:Tslong);cdecl;external;
(* Const before type ignored *)
procedure arb_bell_fmpz(res:Tarb_t; n:Tfmpz_t; prec:Tslong);cdecl;external;
procedure arb_bell_ui(res:Tarb_t; n:Tulong; prec:Tslong);cdecl;external;
(* Const before type ignored *)
procedure arb_euler_number_fmpz(res:Tarb_t; n:Tfmpz_t; prec:Tslong);cdecl;external;
procedure arb_euler_number_ui(res:Tarb_t; n:Tulong; prec:Tslong);cdecl;external;
procedure arb_fmpz_euler_number_ui_multi_mod(res:Tfmpz_t; n:Tulong; alpha:Tdouble);cdecl;external;
procedure arb_fmpz_euler_number_ui(res:Tfmpz_t; n:Tulong);cdecl;external;
(* Const before type ignored *)
procedure arb_partitions_fmpz(res:Tarb_t; n:Tfmpz_t; prec:Tslong);cdecl;external;
procedure arb_partitions_ui(res:Tarb_t; n:Tulong; prec:Tslong);cdecl;external;
procedure arb_primorial_nth_ui(res:Tarb_t; n:Tulong; prec:Tslong);cdecl;external;
procedure arb_primorial_ui(res:Tarb_t; n:Tulong; prec:Tslong);cdecl;external;
(* Const before type ignored *)
procedure arb_lambertw(res:Tarb_t; x:Tarb_t; flags:longint; prec:Tslong);cdecl;external;
(* Const before type ignored *)
procedure arb_sqr(res:Tarb_t; val:Tarb_t; prec:Tslong);cdecl;external;
{ vector functions  }
function _arb_vec_entry_ptr(vec:Tarb_ptr; i:Tslong):Tarb_ptr;cdecl;external;
procedure _arb_vec_printn(vec:Tarb_srcptr; len:Tslong; ndigits:Tslong; flags:Tulong);cdecl;external;
procedure _arb_vec_zero(A:Tarb_ptr; n:Tslong);cdecl;external;
function _arb_vec_is_zero(vec:Tarb_srcptr; len:Tslong):longint;cdecl;external;
function _arb_vec_is_finite(x:Tarb_srcptr; len:Tslong):longint;cdecl;external;
procedure _arb_vec_set(res:Tarb_ptr; vec:Tarb_srcptr; len:Tslong);cdecl;external;
procedure _arb_vec_set_round(res:Tarb_ptr; vec:Tarb_srcptr; len:Tslong; prec:Tslong);cdecl;external;
procedure _arb_vec_swap(res:Tarb_ptr; vec:Tarb_ptr; len:Tslong);cdecl;external;
procedure _arb_vec_neg(B:Tarb_ptr; A:Tarb_srcptr; n:Tslong);cdecl;external;
procedure _arb_vec_sub(C:Tarb_ptr; A:Tarb_srcptr; B:Tarb_srcptr; n:Tslong; prec:Tslong);cdecl;external;
procedure _arb_vec_add(C:Tarb_ptr; A:Tarb_srcptr; B:Tarb_srcptr; n:Tslong; prec:Tslong);cdecl;external;
(* Const before type ignored *)
procedure _arb_vec_scalar_mul(res:Tarb_ptr; vec:Tarb_srcptr; len:Tslong; c:Tarb_t; prec:Tslong);cdecl;external;
(* Const before type ignored *)
procedure _arb_vec_scalar_div(res:Tarb_ptr; vec:Tarb_srcptr; len:Tslong; c:Tarb_t; prec:Tslong);cdecl;external;
(* Const before type ignored *)
procedure _arb_vec_scalar_mul_fmpz(res:Tarb_ptr; vec:Tarb_srcptr; len:Tslong; c:Tfmpz_t; prec:Tslong);cdecl;external;
procedure _arb_vec_scalar_mul_2exp_si(res:Tarb_ptr; src:Tarb_srcptr; len:Tslong; c:Tslong);cdecl;external;
(* Const before type ignored *)
procedure _arb_vec_scalar_addmul(res:Tarb_ptr; vec:Tarb_srcptr; len:Tslong; c:Tarb_t; prec:Tslong);cdecl;external;
procedure _arb_vec_get_mag(bound:Tmag_t; vec:Tarb_srcptr; len:Tslong);cdecl;external;
function _arb_vec_bits(x:Tarb_srcptr; len:Tslong):Tslong;cdecl;external;
(* Const before type ignored *)
procedure _arb_vec_set_powers(xs:Tarb_ptr; x:Tarb_t; len:Tslong; prec:Tslong);cdecl;external;
procedure _arb_vec_add_error_arf_vec(res:Tarb_ptr; err:Tarf_srcptr; len:Tslong);cdecl;external;
